--- a/ad.guard.conf
+++ b/ad.guard.conf
@@ -1,3 +1,3 @@
 # bilibili
-^https://app.bilibili.com/x/v2/splash/show url script-response-body https://raw.githubusercontent.com/iamsuperflying/ad-guard/dev/bilibili/index.js
+^https://app.bilibili.com/x/v2/splash/(show|list) url script-response-body https://raw.githubusercontent.com/iamsuperflying/ad-guard/dev/bilibili/index.js
 ^https://app.bilibili.com/x/v2/feed/index url script-response-body https://raw.githubusercontent.com/iamsuperflying/ad-guard/dev/bilibili/index.js
